--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -12,6 +12,7 @@
         'assets/vendor/nvd3/nv.d3.css'
         'assets/vendor/bootstrap/dist/css/bootstrap.css'
         'assets/vendor/bootstrap/dist/css/bootstrap-theme.css'
+        'assets/vendor/font-awesome/css/font-awesome.css'
         '@MainAdminBundle/Resources/public/css/main.css'
         '@MainAdminBundle/Resources/public/css/dataurl.css'
         'assets/vendor/angular-motion/dist/angular-motion.css'
