--- a/src/Main/AdminBundle/Resources/views/Databases/new.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Databases/new.html.twig
@@ -16,44 +16,43 @@
             <h1 class="page-header">New Database</h1>
         </div>
     </div>
-    <div ng-controller="NewWidgetCtrl" class="row ng-cloak">
+    <div ng-controller="NewDatabaseCtrl" class="row ng-cloak">
         <div class="col-sm-7 col-md-7">
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal" name="form">
                 <div class="form-group">
                     <label for="name" class="col-sm-2 control-label">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="name" placeholder="Name">
+                        <input type="text" class="form-control" id="name" ng-model="database.name" placeholder="Name" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="address" class="col-sm-2 control-label">Address</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="address" placeholder="Address">
+                        <input type="text" class="form-control" id="address" ng-model="database.address" placeholder="Address" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="login" class="col-sm-2 control-label">Login</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="login" placeholder="Login">
+                        <input type="text" class="form-control" id="login" ng-model="database.login" placeholder="Login" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2 control-label">Password</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
+                        <input type="password" class="form-control" id="password" ng-model="database.password" placeholder="Password" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="port" class="col-sm-2 control-label">Port</label>
                     <div class="col-sm-10">
-                        <input type="number" class="form-control" id="port" placeholder="Port">
+                        <input type="number" class="form-control" id="port" ng-model="database.port" placeholder="Port" required>
                     </div>
                 </div>
-
                 <div class="space-10"></div>
                 <div class="form-group pull-right">
                     <button class="btn btn-default">Test</button>
-                    <button class="btn btn-success">Save</button>
+                    <button class="btn btn-info" ng-click="saveDatabase()" ng-disabled="form.$invalid">Save</button>
                 </div>
             </form>
         </div>
