--- a/src/Main/AdminBundle/Resources/views/Databases/edit.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Databases/edit.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }}
     {% javascripts
 
-    '@MainAdminBundle/Resources/public/js/Controlers/newDatabaseControler.js'
+    '@MainAdminBundle/Resources/public/js/Controlers/editDatabaseControler.js'
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
@@ -16,7 +16,7 @@
             <h1 class="page-header">New Database</h1>
         </div>
     </div>
-    <div ng-controller="NewDatabaseCtrl" class="row ng-cloak">
+    <div ng-controller="EditDatabaseCtrl" class="row ng-cloak">
         <div class="col-sm-7 col-md-7">
             <form class="form-horizontal" name="form">
                 <div class="form-group">
@@ -52,6 +52,7 @@
                 <div class="space-10"></div>
                 <div class="form-group pull-right">
                     <button class="btn btn-default">Test</button>
+                    <button class="btn btn-danger" ng-click="deleteDatabase(database.id)">Delete</button>
                     <button class="btn btn-info" ng-click="saveDatabase()" ng-disabled="form.$invalid">Save</button>
                 </div>
             </form>
