--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -42,6 +42,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{ path('get_databases') }}">Databases</a></li>
                 <li><a href="{{ path('get_users') }}">Users</a></li>
                 <li><a href="{{ path('get_widgets') }}">Widgets</a></li>
                 <li><a href="{{ path('show_userProfile', {'id': app.security.getToken().getUser().getId() }) }}">Profile</a></li>
