--- a/src/Main/UserBundle/Resources/views/Users/list.html.twig
+++ b/src/Main/UserBundle/Resources/views/Users/list.html.twig
@@ -20,7 +20,7 @@
                 <table ng-table="tableParams" class="table table-condensed">
                     <tr ng-repeat="user in $data">
                         <td data-title="'Id'" sortable="'id'">{{ '{{user.id}}' }}</td>
-                        <td data-title="'Name'" sortable="'name'">{{ '{{user.name}}' }}</td>
+                        <td data-title="'Name'" sortable="'name'">{{ '{{user.username}}' }}</td>
                         <td data-title="'Email'" sortable="'email'">{{ '{{user.email}}' }}</td>
                         <td data-title="'Last Login'" sortable="'last_login'">{{ '{{user.last_login}}' }}</td>
                         <td data-title="'Actions'">
