--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -13,12 +13,11 @@
         'assets/vendor/bootstrap/dist/css/bootstrap.css'
         'assets/vendor/bootstrap/dist/css/bootstrap-theme.css'
         'assets/vendor/font-awesome/css/font-awesome.css'
-        '@MainAdminBundle/Resources/public/css/main.css'
-        '@MainAdminBundle/Resources/public/css/dataurl.css'
         'assets/vendor/angular-motion/dist/angular-motion.css'
         'assets/vendor/angular-xeditable/dist/css/xeditable.css'
         'assets/vendor/ng-table/ng-table.css'
         'assets/vendor/nvd3/nv.d3.css'
+        '@layout'
         filter='yui_css'
         %}
         <link rel="stylesheet" href="{{ asset_url }}" />
