--- a/src/Main/AdminBundle/Resources/views/Widgets/index.html.twig
+++ b/src/Main/AdminBundle/Resources/views/Widgets/index.html.twig
@@ -29,7 +29,8 @@
                     </td>
                     <td data-title="'Real time'" sortable="'realTime'">{{ '{{widget.realTime}}' }}</td>
                     <td data-title="'Source'" sortable="'source'">{{ '{{widget.source}}' }}</td>
-                    <td data-title="'Type'" sortable="'type'">{{ '{{widget.type}}' }}</td>
+                    <td data-title="'Chart type'" sortable="'chartType'">{{ '{{widget.chartType}}' }}</td>
+                    <td data-title="'Query type'" sortable="'queryType'">{{ '{{widget.queryType}}' }}</td>
                     <td data-title="'Actions'">
                         <a href="{{ app.request.getBaseURL() }}/widgets/{{ '{{widget.id}}' }}/edit">
                             <button class="btn btn-danger btn-xs">
