--- a/src/Main/UserBundle/Resources/views/layout.html.twig
+++ b/src/Main/UserBundle/Resources/views/layout.html.twig
@@ -1,21 +1,49 @@
 {% extends "MainAdminBundle::layout.html.twig" %}
-    {% block stylesheets %}
-        {{ parent() }}
-        <link rel="stylesheet" href="{{ asset('css/signin.css') }}" />
-    {% endblock %}
+
 {% block body %}
-    {% trans_default_domain 'FOSUserBundle' %}
-        {% if error %}
-            <div class="alert alert-danger">{{ error|trans }}</div>
-        {% endif %}
-    <form class="form-signin" role="form" action="{{ path("fos_user_security_check") }}" method="post">
-        <h2 class="form-signin-heading">Log in</h2>
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-        <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" placeholder="Email address" required autofocus>
-        <input type="password" id="password" name="_password" class="form-control" placeholder="Password" required>
-        <label class="checkbox">
-            <input type="checkbox" id="remember_me" name="_remember_me" value="remember-me"> Remember me
-        </label>
-        <button id="_submit" name="_submit" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </form>
+{% trans_default_domain 'FOSUserBundle' %}
+{% if error %}
+    <div class="alert alert-danger">{{ error|trans }}</div>
+{% endif %}
+
+<div id="main" role="main">
+    <div class="col-xs-12 col-sm-12 col-md-4 col-md-offset-1 col-lg-4">
+        <div class="well no-padding">
+            <form action="{{ path("fos_user_security_check") }}" id="login-form" method="post" class="smart-form client-form">
+                <header>Log In</header>
+                <fieldset>
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                    <section>
+                        <label class="label">E-mail</label>
+                        <label class="input"> <i class="icon-append fa fa-user"></i>
+                            <input type="text" id="username" name="_username" value="{{ last_username }}" >
+                            <b class="tooltip tooltip-top-right"><i class="fa fa-user txt-color-teal"></i> Please enter email address/username</b></label>
+                    </section>
+
+                    <section>
+                        <label class="label">Password</label>
+                        <label class="input"> <i class="icon-append fa fa-lock"></i>
+                            <input type="password" id="password" name="_password">
+                            <b class="tooltip tooltip-top-right"><i class="fa fa-lock txt-color-teal"></i> Enter your password</b> </label>
+                        <div class="note">
+                            <a href="#">Forgot password?</a>
+                        </div>
+                    </section>
+
+                    <section>
+                        <label class="checkbox">
+                            <input type="checkbox" id="remember_me" name="_remember_me" value="remember-me">
+                            <i></i>Stay signed in</label>
+                    </section>
+                </fieldset>
+                <footer>
+                    <button id="_submit" name="_submit" type="submit" class="btn btn-primary">
+                        Sign in
+                    </button>
+                </footer>
+            </form>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
