--- a/src/Main/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Main/AdminBundle/Resources/views/layout.html.twig
@@ -81,6 +81,7 @@
     'assets/vendor/angular-nvd3/dist/angular-nvd3.js'
     'assets/vendor/ace-builds/src-min-noconflict/ace.js'
     'assets/vendor/angular-ui-ace/ui-ace.js'
+    '@lodash'
 
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
